--- a/src/App.css
+++ b/src/App.css
@@ -303,7 +303,25 @@ body{
   padding: 0;
   margin: 0;
   width: 100%;
+}
+
+.w1{
   background-image: url('./assets/img/Fondo.png');
+}
+.w2{
+  background-image: url('./assets/img/Fondo2.png');
+}
+
+.investTag{
+  display: inline-block;
+  position: relative;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+}
+
+.seeInv{
+  display: none;
 }
 
 .home2>h1{
@@ -501,6 +519,36 @@ body{
   text-transform: uppercase;
   color: #E6E6E6;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+/*CONTAINER 2B*/
+
+.propertyTag{
+  display: none;
+  position: relative;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+}
+
+.home2b>h1{
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 42px;
+/* identical to box height */
+  text-align: center;
+  letter-spacing: 0.1em;
+  background: radial-gradient(164.22% 6353.96% at 134.83% 15.18%, #F986B7 0%, #F5247D 56.46%, #1E2022 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
+}
+
+.seeProp{
+  display: inline-block;
 }
 
 /*CONTAINER 3 ---------------------------*/
